--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,4 @@ NEXT_PUBLIC_PADDLE_PRICE_ID=
 NEXT_PUBLIC_APP_REDIRECT_URL=yourapp://checkout/success
 NEXT_PUBLIC_PADDLE_ENV=sandbox # or `production`
 NEXT_PUBLIC_PADDLE_CLIENT_TOKEN=
+NEXT_PUBLIC_THEME=light # or `dark`
