--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,8 @@
-APPLE_TEAM_ID=
-NEXT_PUBLIC_BUNDLE_IDENTIFIER=
+APPLE_TEAM_ID=ABCDE12345.com.example
+NEXT_PUBLIC_BUNDLE_IDENTIFIER=yourapp
+
+NEXT_PUBLIC_PADDLE_PRICE_ID=
+NEXT_PUBLIC_APP_REDIRECT_URL=yourapp://checkout/success
 NEXT_PUBLIC_PADDLE_ENV=sandbox # or `production`
 NEXT_PUBLIC_PADDLE_CLIENT_TOKEN=
+NEXT_PUBLIC_THEME=light # or `dark`
