fix: update example app env vars

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-APPLE_TEAM_ID=ABCDE12345.com.example
-NEXT_PUBLIC_BUNDLE_IDENTIFIER=yourapp
+APPLE_TEAM_ID=ABCDE12345
+NEXT_PUBLIC_BUNDLE_IDENTIFIER=com.example.yourapp
 
 NEXT_PUBLIC_PADDLE_PRICE_ID=
 NEXT_PUBLIC_APP_REDIRECT_URL=yourapp://checkout/success
