--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APPLE_TEAM_ID=ABCDE12345
 NEXT_PUBLIC_BUNDLE_IDENTIFIER=com.example.yourapp
 
 NEXT_PUBLIC_PADDLE_PRICE_ID=
-NEXT_PUBLIC_APP_REDIRECT_URL=yourapp://checkout/success
+NEXT_PUBLIC_APP_REDIRECT_URL=yourapp://checkout_redirect/success
 NEXT_PUBLIC_PADDLE_ENV=sandbox # or `production`
 NEXT_PUBLIC_PADDLE_CLIENT_TOKEN=
 NEXT_PUBLIC_THEME=light # or `dark`
