--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@paddle/paddle-js": "^1.4.1",
+    "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-separator": "^1.1.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
